Implementación de Frontend, se habilita edición de planes y perfil de usuario
